--- a/requirements.txt
+++ b/requirements.txt
@@ -28,3 +28,6 @@ watchfiles==0.19.0
 websockets==11.0.3
 python-telegram-bot==13.7
 
+selenium==3.141.0
+other_package==1.2.3
+another_package>=4.0.0
